# pulso

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  pulso.toml
cmake/: Dependencies.cmake
docs/: arquitectura.md  preguntas-frecuentes.md
examples/: README.md  prometheus.yml
src/: CMakeLists.txt  README.md  main.cpp
src/cli/: arg_parser.cpp
src/collectors/: error_recoleccion.hpp  icollector.hpp
src/collectors/cpu/: cpu_usage.cpp  cpu_usage.hpp
src/collectors/memory/: ram_usage.cpp  ram_usage.hpp
src/config/: config.hpp
src/core/: types.hpp
src/escuadra/math/: stats.py
src/formatters/: formatter_csv.cpp  formatter_csv.hpp  formatter_json.cpp  formatter_json.hpp
src/http/: handler_health.cpp  handler_health.hpp  handler_history.cpp  handler_history.hpp  handler_metrics.cpp  handler_metrics.hpp  handler_prometheus.cpp  handler_prometheus.hpp
src/platform/linux/: collector_cpu.cpp  collector_cpu.hpp  collector_disk.cpp  collector_disk.hpp  collector_memory.cpp  collector_memory.hpp
src/sampler/: sampler.cpp  sampler.hpp
src/storage/: schema.cpp  schema.hpp  storage.cpp
src/utils/: ram_usage.cpp
src/utils/logging/: logger.cpp  logger.hpp
tests/: CMakeLists.txt
tests/formatters/: test_formatter_json.cpp
tests/plan/: plan-de-pruebas.md
tests/storage/: test_storage.cpp
